# BB-Top-100

./: README.md  pyproject.toml
app/: __init__.py
app/interface/: api.py  common.py  decorators.py  logger.py
app/pyside6/: main_graph.py  main_window.py  main_window_ui.py  preload_view.py  threads.py
assets/ui/: main_window_ui.ui
