[tool.poetry]
name = "bb-top-100"
version = "1.0.0"
description = ""
authors = ["gupingan <g332920287@foxmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
xlsxwriter = "^3.2.0"
openpyxl = "^3.1.3"
requests = "^2.32.3"
matplotlib = "3.7.5"
pyside6 = "6.6.3"
loguru = "^0.7.2"
jieba = "^0.42.1"
wordcloud = "^1.9.3"
pyinstaller = "6.5.0"
setuptools = "^70.0.0"

[[tool.poetry.source]]
name = "tencent-pypi"
url = "http://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
